--- a/project5.html
+++ b/project5.html
@@ -671,6 +671,8 @@
             </div>
         </div>
         <div class="clear-float"></div>
+    <h2>1.9 Hybrid Images </h2>
+    <p></p>
     <h1>Part B: Diffusion Models from Scratch</h1>
     <h2>Training a Single-Step Denoising UNet</h2>
     <p>For the second part of the project, I implement diffusion models from scratch. As a first step, I train single-sept denoising UNet. Firstly, I follow the model diagram for UNet to define its architecture. To train a denoiser with UNet, I use the image dataset from MNIST. Given a clean image, I add a random noise with sigma coefficient to create a noised image. Here are examples of noised images with different sigmas: </p>
