--- a/project5.html
+++ b/project5.html
@@ -672,11 +672,25 @@
         </div>
         <div class="clear-float"></div>
     <h2>1.9 Hybrid Images </h2>
-    <p></p>
+    <p> In this section, I will implement hybrid images implementation. Hybrids images appear as a one prompt from afar, and another from a closer range. To create hybrid images, I will use a similar technique to the previous section. I will first estimate the noise with two different prompts, and will pass them through low-pass filter. Then, I will combine the low frequency component of one noise, and the high frequency component of another. Their combination will form the final noise estimate. Here are my results:</p>
+    <div class="image-grid">
+        <div class="image-container">
+            <img src="images5/hybrid1.png" alt="taj.jpg">
+            <p class="image-subtitle">'a lithograph of a skull' and 'a lithograph of waterfalls'</p>
+        </div>
+                <div class="image-container">
+            <img src="images5/hybrid2.png" alt="taj.jpg">
+                    <p class="image-subtitle">"a lithography of frog" and "a lithography of autumn leaves"</p>
+        </div>
+                <div class="image-container">
+            <img src="images5/hybrid3.png" alt="taj.jpg">
+                    <p class="image-subtitle">"a lithography of Batman symbol" and "a lithography of a city with skyscrapers"</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
     <h1>Part B: Diffusion Models from Scratch</h1>
     <h2>Training a Single-Step Denoising UNet</h2>
     <p>For the second part of the project, I implement diffusion models from scratch. As a first step, I train single-sept denoising UNet. Firstly, I follow the model diagram for UNet to define its architecture. To train a denoiser with UNet, I use the image dataset from MNIST. Given a clean image, I add a random noise with sigma coefficient to create a noised image. Here are examples of noised images with different sigmas: </p>
-    
     <div class="image-gr">
         <div class="image-container">
             <img src="images5/partbimage4.png" alt="taj.jpg">
