--- a/project5.html
+++ b/project5.html
@@ -40,6 +40,12 @@
             gap: 15px;
             margin-bottom: 20px;
         }
+        .image-grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; 
+}
+
         .image-griddd {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
