--- a/project5.html
+++ b/project5.html
@@ -34,15 +34,15 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             margin-bottom: 20px;
         }
-        .image-grid {
+        .image-grrid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 15px;
             margin-bottom: 20px;
         }
-        .image-grid img {
-    width: 70%;
-    height: 70%;
+        .image-grrid img {
+    width: 40%;
+    height: 40%;
     object-fit: contain; 
 }
 
@@ -679,7 +679,7 @@
         <div class="clear-float"></div>
     <h2>1.9 Hybrid Images </h2>
     <p> In this section, I will implement hybrid images implementation. Hybrids images appear as a one prompt from afar, and another from a closer range. To create hybrid images, I will use a similar technique to the previous section. I will first estimate the noise with two different prompts, and will pass them through low-pass filter. Then, I will combine the low frequency component of one noise, and the high frequency component of another. Their combination will form the final noise estimate. Here are my results:</p>
-    <div class="image-grid">
+    <div class="image-grrid">
         <div class="image-container">
             <img src="images5/hybrid1.png" alt="taj.jpg">
             <p class="image-subtitle">'a lithograph of a skull' and 'a lithograph of waterfalls'</p>
