--- a/project5.html
+++ b/project5.html
@@ -679,7 +679,7 @@
         <div class="clear-float"></div>
     <h2>1.9 Hybrid Images </h2>
     <p> In this section, I will implement hybrid images implementation. Hybrids images appear as a one prompt from afar, and another from a closer range. To create hybrid images, I will use a similar technique to the previous section. I will first estimate the noise with two different prompts, and will pass them through low-pass filter. Then, I will combine the low frequency component of one noise, and the high frequency component of another. Their combination will form the final noise estimate. Here are my results:</p>
-    <div class="image-grrid">
+    <div class="image-grid">
         <div class="image-container">
             <img src="images5/hybrid1.png" alt="taj.jpg">
             <p class="image-subtitle">'a lithograph of a skull' and 'a lithograph of waterfalls'</p>
