--- a/project5.html
+++ b/project5.html
@@ -140,7 +140,7 @@
             </div>
         </div>
         <div class="clear-float"></div>
-            <p> The generated images actually represent the prompts pretty well. To test the effect of num_inference_steps on the outputs, I test the prompt 'an oil painting of a snowy mountain village' with num_inference_steps 7 and 46 in addition to 20 given above. Here are outputs with num_inference_steps 7 and 46 respectively:<p>
+            <p> The generated images actually represent the prompts pretty well. To test the effect of num_inference_steps on the outputs, I test the prompt 'an oil painting of a snowy mountain village' with num_inference_steps 7 and 46 in addition to 20 given above. Here are outputs with num_inference_steps 7 and 46 respectively:</p>
             <div class="image-gri">
             <div class="image-container">
                 <img src="images5/parta1_2.png" alt="taj.jpg">
