--- a/project5.html
+++ b/project5.html
@@ -52,6 +52,12 @@
             gap: 15px;
             margin-bottom: 20px;
         }
+                .image-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+        }
         .image {
             display: flex;
             justify-content: center;
