--- a/project5.html
+++ b/project5.html
@@ -58,6 +58,11 @@
             gap: 15px;
             margin-bottom: 20px;
         }
+                .image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 3px;
+        }
         .image {
             display: flex;
             justify-content: center;
